Generates a CPPN image, but is the same each time. Needs to be random